Fix the mathjax output alignment
It was introduced by the default css style used in `d-kusk/minimage` hugo theme.

```
.c-post__body *+* { margin-top: 0.9rem }
```

set the `margin-top` to 0 to fix the issue.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -11,3 +11,7 @@ th, td {
   text-align: left;
   border: 1px solid;
 }
+
+.c-post__body *+* {
+  margin-top: 0%
+}
